alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ section
     border: #fff solid 10px;
     border-bottom:#fff solid 80px;
     max-width:50%;
-    transform: rotate(-4deg);
+    transform: rotate(0deg);
 }
 .btn
 {
@@ -138,7 +138,7 @@ header.sticky ul li a
 .content .w50 img
 {
     border: #fff solid 17px;
-    transform: rotate(-7deg);
+    transform: rotate(0deg);
 }
 .contentBx
 {
@@ -544,7 +544,7 @@ color:#999;
     {
         border: #fff solid 10px;
         margin-left:100px;
-        transform: rotate(6deg);
+        transform: rotate(0deg);
         display:flex;
         position:relative;
     }
@@ -554,9 +554,9 @@ color:#999;
     }
     .banner .shanImg
     {
-        border: #fff solid 5px;
-        border-bottom:#fff solid 30px;
-        transform: rotate(-6deg);
+        border: #fff solid 15px;
+        border-bottom:#fff solid 40px;
+        transform: rotate(0deg);
         
     }
 }
